	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

    PIG-1198: performance improvements through use of unsorted input splits that span multiple files (yanz)

  BUG FIXES

    PIG-1318 Invalid type for source_table field when using order-preserving Sorted Table Union (gauravj via yanz)

    PIG-1258 Number of sorted input splits is unusually high (yanz)

    PIG-1269 Restrict schema definition for collection (xuefuz via yanz)

    PIG-1253: make map/reduce test cases run on real cluster (chaow via yanz)

    PIG-1276: Pig resource schema interface changed, so Zebra needs to catch exception thrown from the new interfaces. (xuefuz via yanz)

    PIG-1256: Bag field should always contain a tuple type as the field schema in ResourceSchema object converted from Zebra Schema (xuefuz via yanz)

    PIG-1227: Throw exception if column group meta file is missing for an unsorted table (yanz)

    PIG-1201: unnecessary name node calls by each mapper; too big input split serialization size by Pig's Slice implementation (yanz)

    PIG-1115: cleanup of temp files left by failed tasks (gauravj via yanz)

    PIG-1167: Hadoop file glob support (yanz)

    PIG-1153: Record split exception fix (yanz)

    PIG-1145: Merge Join on Large Table throws an EOF exception (yanz)

    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
	gates)

    PIG-1078: merge join with empty table failed (yanz via gates)

    PIG-1091: Exception when load with projection of map keys on a map column
	that is not map split (yanz via gates).

    PIG-1026: [zebra] map split returns null (yanz via pradeepkth)

	PIG-1057 Zebra does not support concurrent deletions of column groups now
	(chaow via gates).
